@@ -3,6 +3,7 @@ Changes for 3.2.2rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 3.2.1
@@ -188,6 +189,7 @@ Changes for 3.0.6rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 3.0.5
@@ -1684,6 +1686,7 @@ Changes for 2.2.16rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.15
